# capstone-yolo

./: .gitignore  README.md  auto.py  data.yaml  final.py  final2.py  fish.yaml  labeling_manual.py  main.py  pyproject.toml  requirements.txt  status.json  testing camera.py
_archive/: extract.py  final.py  final2.py  final_images.py  labeling_manual.py  main1.py  preview_anotation_pic.py
app/: __init__.py  config.py  dataset_manager.py  detector.py  env_checker.py  model_manager.py  server.py  trainer.py
app/static/: app.js  index.html  style.css
scripts/: auto_annotate.py
